# bf_ui_lib

./: .gitignore  Builib.pri  Builib.pro  BuilibConfig.cmake  CMakeLists.txt  Readme.md  TODOLIST  buires.qrc  changelog  components.pri  config.h.in
feature/: BUILIB.prf  Builib.prf
include/: BAboutDialog.h  BAboutDialog.ui  BCard.h  BCard.ui  BConsole.h  BConsole.ui  BCustomTabWidget.h  BLauncher.h  BLauncher.ui  BLoadingDialog.h  BLoadingDialog.ui  BLoadingWidget.h  BLoadingWidget.ui  BProgramSharer.cpp  BProgramSharer.h  BUILib.h  BUiUtil.h  BUpdator.h  BcConsole.h  BcConsole.ui  BuiLib.h  builib_global.h
include/components/: MaterialPrecompiled.h  builib_components_global.h  qtmaterialappbar.h  qtmaterialautocomplete.h  qtmaterialautocomplete_internal.h  qtmaterialautocomplete_p.h  qtmaterialavatar.h  qtmaterialbadge.h  qtmaterialcheckbox.h  qtmaterialcircularprogress.h  qtmaterialcircularprogress_internal.h  qtmaterialdialog.h  qtmaterialdialog_internal.h  qtmaterialdrawer.h  qtmaterialdrawer_internal.h  qtmaterialfab.h  qtmaterialflatbutton.h  (+19 more)
lib/: BuiLib-msvc0.exp  BuiLib-msvc0.lib  BuiLib0.exp  BuiLib0.lib  BuiLibd-msvc0.exp  BuiLibd-msvc0.ilk  BuiLibd-msvc0.lib  BuiLibd0.exp  BuiLibd0.ilk  BuiLibd0.lib  Builib.ilk  Builib.lib  Builibd.exp  Builibd.ilk  Builibd.lib
res/: bui.qss  builib_zh_CN.qm  builib_zh_CN.ts
src/: BAboutDialog.cpp  BCard.cpp  BConsole.cpp  BCustomTabWidget.cpp  BCustomTabWidget.ui  BLauncher.cpp  BLoadingDialog.cpp  BLoadingWidget.cpp  BProgramSharer.cpp  BUILib.cpp  BUiUtil.cpp  BUpdator.cpp  BcConsole.cpp  BuiLib.cpp
(+13 files in other folders)
